--- a/frontend_app/gadgetgeekcentral_gui/package.json
+++ b/frontend_app/gadgetgeekcentral_gui/package.json
@@ -10,7 +10,9 @@
     "axios": "^1.3.4",
     "bootstrap": "^5.3.0-alpha1",
     "core-js": "^3.8.3",
+    "firebase": "^9.18.0",
     "vue": "^3.2.13",
+    "vue-responsive-video-background-player": "^2.3.1",
     "vue-router": "^4.1.6",
     "vue3-cookies": "^1.0.6",
     "vuex": "^4.0.0"
